@@ -47,6 +47,16 @@ end_import
 
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Iterator
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -148,6 +158,13 @@ return|;
 block|}
 name|Set
 name|result
+init|=
+operator|new
+name|LinkedHashSet
+argument_list|()
+decl_stmt|;
+name|Set
+name|excluded
 init|=
 operator|new
 name|LinkedHashSet
@@ -345,6 +362,35 @@ expr_stmt|;
 block|}
 block|}
 block|}
+if|else if
+condition|(
+name|confs
+index|[
+name|i
+index|]
+operator|.
+name|startsWith
+argument_list|(
+literal|"!"
+argument_list|)
+condition|)
+block|{
+name|excluded
+operator|.
+name|add
+argument_list|(
+name|confs
+index|[
+name|i
+index|]
+operator|.
+name|substring
+argument_list|(
+literal|1
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
 else|else
 block|{
 name|result
@@ -358,6 +404,34 @@ index|]
 argument_list|)
 expr_stmt|;
 block|}
+block|}
+for|for
+control|(
+name|Iterator
+name|iter
+init|=
+name|excluded
+operator|.
+name|iterator
+argument_list|()
+init|;
+name|iter
+operator|.
+name|hasNext
+argument_list|()
+condition|;
+control|)
+block|{
+name|result
+operator|.
+name|remove
+argument_list|(
+name|iter
+operator|.
+name|next
+argument_list|()
+argument_list|)
+expr_stmt|;
 block|}
 return|return
 operator|(
