@@ -2380,6 +2380,77 @@ expr_stmt|;
 block|}
 specifier|public
 name|void
+name|testExcludedConf
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|resolve
+operator|.
+name|setFile
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/java/org/apache/ivy/ant/ivy-multiconf.xml"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|resolve
+operator|.
+name|setConf
+argument_list|(
+literal|"*,!default"
+argument_list|)
+expr_stmt|;
+name|resolve
+operator|.
+name|execute
+argument_list|()
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|getIvyFileInCache
+argument_list|(
+name|ModuleRevisionId
+operator|.
+name|newInstance
+argument_list|(
+literal|"org1"
+argument_list|,
+literal|"mod1.1"
+argument_list|,
+literal|"2.0"
+argument_list|)
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|getIvyFileInCache
+argument_list|(
+name|ModuleRevisionId
+operator|.
+name|newInstance
+argument_list|(
+literal|"org1"
+argument_list|,
+literal|"mod1.2"
+argument_list|,
+literal|"2.0"
+argument_list|)
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
 name|testResolveWithAbsoluteFile
 parameter_list|()
 block|{
